modify : put anchor link to any pages in main page.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,6 +2,10 @@
 
 @main("Welcome to Play") {
 
-    @play20.welcome(message)
+    <h1>main page.</h1>
+    <ul>
+        <li><a href="/wanted_books">wanted_books</a></li>
+        <li><a href="/provided_books">provided_books</a></li>
+    </ul>
 
 }
