modify : create user form by form template helper

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,6 +4,7 @@
 
     <h1>main page.</h1>
     <ul>
+        <li><a href="/user">user</a></li>
         <li><a href="/wanted_books">wanted_books</a></li>
         <li><a href="/provided_books">provided_books</a></li>
     </ul>
