--- a/app/views/common/search_form.scala.html
+++ b/app/views/common/search_form.scala.html
@@ -3,7 +3,7 @@
 @main(message) {
 
     <h1>Form</h1>
-    <form id="searchForm" action="/wanted_books/search" method="post">
+    <form id="searchForm" action="/provided/search" method="post">
         <input type="text" name="keyword"/>
         <input type="submit" name="submit" value="検索"/>
     </form>
