--- a/app/views/provided/index.scala.html
+++ b/app/views/provided/index.scala.html
@@ -7,6 +7,6 @@
     <h1>@{message + " list."}</h1>
     @list(books)
     <a href="/">back</a>
-    <a href="/provided_books/add">search</a>
+    <a href="/provided_books/form">search</a>
 
 }
