--- a/app/views/search/form.scala.html
+++ b/app/views/search/form.scala.html
@@ -1,4 +1,4 @@
-@(title: String, action: String)
+@(title: String, action: Call, backPath:String)
 
 @main(title) {
 
@@ -7,6 +7,6 @@
         <input type="text" name="keyword"/>
         <input type="submit" name="submit" value="検索"/>
     </form>
-    <a href=@{"/" + action.split("/")(1)}>back</a>
+    <a href=@backPath>back</a>
 
 }
